name:                cublas
version:             0.1.0.0
synopsis:            Foreign interface to CUBLAS
description:         FFI to the CUBLAS v2 API
homepage:            http://github.com/alpmestan/cublas
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari
maintainer:          alpmestan@gmail.com
copyright:           2013 Alp Mestanogullari
category:            Math
build-type:          Configure
extra-source-files:  cublas_wrap.h
cabal-version:       >=1.10

library
  exposed-modules:     Foreign.CUDA.BLAS,
                       Foreign.CUDA.BLAS.Internal,
                       Foreign.CUDA.BLAS.Internal.Error
                       Foreign.CUDA.BLAS.Internal.Helper
                       Foreign.CUDA.BLAS.Internal.Level1
  other-modules:       Foreign.CUDA.BLAS.Internal.C2HS
  build-depends:       base >=4 && <5, cuda
  build-tools:         c2hs >= 0.16
  ghc-options:         -Wall -O2 -funbox-strict-fields -fwarn-tabs
  -- hs-source-dirs:      src/
  default-language:    Haskell2010
  include-dirs:        .
  includes:            cublas_wrap.h

executable cublas-test
  main-is:             cublas-test.hs
  ghc-options:         -Wall -O2 -funbox-strict-fields -fwarn-tabs
  build-depends:       base >= 4 && < 5, cublas

Source-repository head
  Type:                 git
  Location:             git://github.com/alpmestan/cublas.git