name:                cublas
version:             0.1.0.0
synopsis:            Foreign interface to CUBLAS
description:         FFI to the CUBLAS v2 API
homepage:            http://github.com/alpmestan/cublas
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari
maintainer:          alpmestan@gmail.com
copyright:           2013 Alp Mestanogullari
category:            Math
build-type:          Configure
extra-source-files:  cublas_wrap.h
cabal-version:       >=1.10

Flag btest
    Description:     Build the test program
    Default:         False

library
  exposed-modules:     Foreign.CUDA.BLAS,
                       Foreign.CUDA.BLAS.Error
                       Foreign.CUDA.BLAS.Helper
                       Foreign.CUDA.BLAS.Level1
  other-modules:       Foreign.CUDA.BLAS.Internal.C2HS
  build-depends:       base >=4 && <5, 
                       cuda == 0.5.*
  build-tools:         c2hs >= 0.16
  ghc-options:         -Wall -O2 -funbox-strict-fields -fwarn-tabs
  -- hs-source-dirs:      src/
  default-language:    Haskell2010
  include-dirs:        .
  includes:            cublas_wrap.h

executable cublas-test
  main-is:             cublas-test.hs
  ghc-options:         -Wall -O2 -rtsopts -threaded -funbox-strict-fields -fwarn-tabs
  build-depends:       base >= 4 && < 5, cublas

  if flag(btest)
      buildable:       True

Source-repository head
  Type:                 git
  Location:             git://github.com/alpmestan/cublas.git